@@ -1,5 +1,6 @@
 KeePassDX(2.9)
- * Fix Autofill recognition
+ * Fix Autofill recognition #712
+ * Keep value after renaming custom field #709
 
 KeePassDX(2.8.5)
  * Fix Base 64 #708
